// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile g huge 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <View
      className="IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        className="IS4"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g medium 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "15px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <View
      className="IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        className="IS4"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 30%;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <View
      className="IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        className="IS4"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g wide 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <View
      className="IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        className="IS4"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile g without breakpoint should be like small 1`] = `
<style>
.IS1 {
  overflow: hidden;
  width: 97;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  0: [object Object];
  1: [object Object];
  2: [object Object];
}

.IS4 {
  flex: 1;
  padding-left: 10px;
  width: 70%;
  justify-content: center;
}

.IS5 {
  flex-direction: row;
  flex: 1;
}

.IS6 {
  flex-direction: column;
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "padding": "10px",
      "paddingHorizontal": "10px",
      "paddingVertical": "10px",
    }
  }
  url="/article/123"
>
  <View
    className="IS6"
  >
    <View
      className="IS5"
    >
      <Image
        aspectRatio={1}
        className="IS1"
        fill={true}
        resizeMode="cover"
        rounded={true}
        uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
      />
      <View
        className="IS4"
      >
        <View
          className="IS2"
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          className="IS3"
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
          longRead={true}
        />
      </View>
    </View>
  </View>
</Link>
`;
